K8s/platform-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platform-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: platformservice
  template:
    metadata:
      labels:
        app: platformservice
    spec:
      containers:
        - name: platformservice
          image: dgiap/platform-service-v4:latest
---
apiVersion: v1
kind: Service
metadata:
  name: platform-cluster-ip-srv
spec:
  type: ClusterIP
  selector:
    app: platformservice
  ports:
  - name: platformservice
    protocol: TCP
    port : 8080
    targetPort: 8080
  - name: platformgrpc
    protocol: TCP
    port : 666
    targetPort: 666
